# TrustAgent

./: .gitignore  README.md  gemini.md  invoke_results.txt  package-lock.json  settings.json  增量决策.md
ai-chat-desktop/: .gitignore  README.md  README_zh.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ai-chat-desktop/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
ai-chat-desktop/src-tauri/: Cargo.toml  tauri.conf.json
ai-chat-desktop/src-tauri/src/: agent.rs  history.rs  main.rs  main.rs.bak  search.rs  window.rs
ai-chat-desktop/src/components/: McpToolsMenu.tsx  Sidebar.tsx  SmartContentRenderer.tsx
