[package]
name = "ai-chat-desktop"
version = "0.0.0"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-openai = "0.16.1"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
dirs-next = "2.0.0"
opener = "0.8.2"
rmcp = { version = "0.5", features = ["transport-io", "transport-child-process", "client"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
default = []
